refactor: remove email invitation feature
